Harden fiber-host lifecycle handling
Make fiber-host shutdown retryable without freeing resources that live
workers may still access. Tighten worker-pool, HTTP, PG, WAL apply,
materialized-view, page-frame, and slot-wait ownership paths.

Preserve zero-GC execution by replacing allocating commit callbacks and
bounding reusable executor state. Add focused tests for saturation,
cancellation, shutdown, construction failure, and mixed pool modes.